<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.ForgotPasswordActivity"
        android:paddingStart="@dimen/constraint_layout_padding_start"
        android:paddingEnd="@dimen/constraint_layout_padding_end"
        android:paddingBottom="@dimen/constraint_layout_padding_start"
        >
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textSize="@dimen/title_size"
            android:layout_marginTop="@dimen/register_margin_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/primary_color"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.75"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_activity_title"
            app:layout_constraintStart_toStartOf="@id/forgot_password_activity_title"
            android:text="@string/forgot_password_subtitle"
            android:layout_marginTop="@dimen/subtitle_margin_top"
            android:textSize="@dimen/text_size"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_password_activity_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forgot_password_activity_email_margin_top"
            android:text="@string/email"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="@+id/forgot_password_subtitle"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_subtitle" />

        <EditText
            android:id="@+id/forgot_password_activity_email_text_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:layout_marginTop="@dimen/label_text_input_margin_top"
            android:background="@drawable/shape_text_field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/placeholder_email"
            android:paddingStart="@dimen/text_field_padding_start"
            android:textSize="@dimen/text_size"
            app:layout_constraintStart_toStartOf="@id/forgot_password_activity_email"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_activity_email"
            tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:maxLength="30"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password_activity_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:backgroundTint="@color/primary_color"
            android:text="@string/submit_title"
            app:cornerRadius="@dimen/text_field_radius"
            app:layout_constraintStart_toStartOf="@id/forgot_password_activity_email_text_field"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_activity_email_text_field" />

        <com.google.android.material.textview.MaterialTextView
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/forgot_password_activity_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_activity_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/register_new_account"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toStartOf="@id/btn_to_register"
            android:layout_marginTop="@dimen/email_margin_top"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_register"
            app:layout_constraintStart_toEndOf="@+id/forgot_password_activity_register_link"
            app:layout_constraintBottom_toBottomOf="@+id/forgot_password_activity_register_link"
            android:layout_marginStart="@dimen/to_login_margin_start"
            android:textSize="@dimen/text_size"
            android:textColor="@color/primary_color"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>